--- a/package.json
+++ b/package.json
@@ -3,21 +3,20 @@
   "version": "1.0.0",
   "description": "An Exercise in Building a Application for Distribution",
   "main": "gulpfile.js",
-  "dependencies": {},
   "devDependencies": {
+    "browser-sync": "^2.18.5",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-csso": "^2.0.0",
     "gulp-eslint": "^3.0.1",
-    "gulp-flatten": "^0.3.1",
-    "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.1.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.0.0",
     "gulp-sourcemaps": "^1.9.1",
     "gulp-uglify": "^2.0.0",
-    "gulp-useref": "^3.1.2"
+    "gulp-useref": "^3.1.2",
+    "run-sequence": "^1.2.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
